# agent-creation-onfly

./: .gitignore  .replit  README.md  app.py  package-lock.json  package.json  pyproject.toml  replit.md
.local/state/replit/agent/filesystem/: filesystem_state.json
attached_assets/: Pasted-STARTUP-Checking-environment-variables-GOOGLE-APPLICATI_1764826691403.txt  Pasted-re-grpc-2-0-2-1-2-2-2-3-2-4-2-5-2-6-2-7-3-0-0-1-34-1-go_1764824434039.txt  downloaded-logs-20251202-205403_1764726855645.csv
backend/: config.py  main.py
backend/routers/: agents.py
backend/services/: auth.py  gemini_parser.py  vertex_ai.py
frontend/: index.html  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  theme.ts
frontend/src/components/: AgentTester.tsx  ConfigEditor.tsx  DeploymentPanel.tsx  RequirementInput.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
